header video rough

--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
+  <body class="cherryBlossomBG">
     <div class="container-fluid p-0">
 
-        <div class="header bg-warning position-relative">
+        <div class="header position-relative">
 
             <div class="d-flex flex-column h-100 w-100 justify-content-center align-items-center z20 text-white position-absolute top">
-                <div class="display-1 text-warning">
+                <div class="display-1 cherryBlossomText">
                     Thai Gourmet
                 </div>
-                <div style="font-size: 35px;">Almost-Authentic Thai Cuisine</div>
+                <div class="honeydewText" style="font-size: 35px;">Almost-Authentic Thai Cuisine</div>
+            </div>
+
+            <div class="embed-responsive embed-responsive-16by9 p-0 position-absolute top z10">
+                <iframe width=100% src="https://www.youtube.com/embed/F5-nfxQjfZU?start=398&autoplay=1&mute=1&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <div class="overlay w-100 h-100 bg-dark position-absolute top z15 opacity">
                 <!--This is the opacity layer-->
             </div>
-
-
-            <div class="embed-responsive embed-responsive-16by9 p-0 position-absolute top z10">
-                <iframe width="100%"src="https://www.youtube.com/watch?v=F5-nfxQjfZU?autoplay=1&mute=1&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
-            </div>
             
         </div>
+    
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
