added start and end times and autoplayed video

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <body class="cherryBlossomBG">
     <div class="container-fluid p-0">
 
+        <!--Try to get Flamingosis "Not Like the Others to play in background"-->
+
         <div class="header position-relative">
 
             <div class="d-flex flex-column h-100 w-100 justify-content-center align-items-center z20 text-white position-absolute top">
@@ -24,16 +26,18 @@
             </div>
 
             <div class="embed-responsive embed-responsive-16by9 p-0 position-absolute top z10">
-                <iframe width=100% src="https://www.youtube.com/embed/F5-nfxQjfZU?start=398&autoplay=1&mute=1&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <!--YT Video-->
+                <iframe width=100% src="https://www.youtube.com/embed/F5-nfxQjfZU?controls=0&start=398&end=415&loop=1&listType=playlist&playlist=F5-nfxQjfZU&autoplay=1&mute=1&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <div class="overlay w-100 h-100 bg-dark position-absolute top z15 opacity">
-                <!--This is the opacity layer-->
+                <!-- opacity layer -->
             </div>
             
         </div>
     
-    </div>
+    </div> <!--End container fluid-->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
