--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   </head>
 
   <body class="cherryBlossomBG">
     <div class="container-fluid p-0">
 
-        <!--Try to get Flamingosis "Not Like the Others to play in background"-->
+        <!--Try to get Flamingosis "Not Like the Others" to play in background"-->
 
         <div class="header position-relative">
 
             <div class="d-flex flex-column h-100 w-100 justify-content-center align-items-center z20 text-white position-absolute top">
-                <div class="display-1 cherryBlossomText">
+                <div class="cherryBlossomText" style="font-size: 120px;">
                     Thai Gourmet
                 </div>
-                <div class="honeydewText" style="font-size: 35px;">Almost-Authentic Thai Cuisine</div>
+                <div class="honeydewText" style="font-size: 25px;">Houston's Best Almost-Authentic Thai Cuisine</div>
             </div>
 
             <div class="embed-responsive embed-responsive-16by9 p-0 position-absolute top z10">
@@ -35,6 +37,42 @@
             </div>
             
         </div>
+
+        <!-- start nav bar -->
+        <nav class="navbar height10 navbar-expand-lg navbar-light cherryBlossonBG sticky-top p-0">
+
+            <a class="navbar-brand" href="#">Thai Gourmet</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse p-0 height10" id="navbarText">
+            <ul class="navbar-nav mr-auto align-items-center height10">
+
+                <li class="nav-item d-flex align-items-center h-100">
+                    <i class="fas fa-house-user"></i>
+                    <a class="nav-link" href="#">
+                        Home 
+                        <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item d-flex align-items-center justify-content-center h-100 width100">
+                <a class="nav-link" href="#">Menu</a>
+                </li>
+                <li class="nav-item d-flex align-items-center justify-content-center h-100">
+                    <i class="fa fa-address-book fa-2x" aria-hidden="true"></i>
+                    <a class="nav-link" href="#">
+
+                    Information</a>
+                </li>
+                <li class="nav-item d-flex align-items-center justify-content-center h-100 width100">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+            </ul>
+
+            <span class="navbar-text">
+                Temporary hours of operation due to COVID-19. Link this to information
+            </span>
+            </div>
+          </nav>
     
     </div> <!--End container fluid-->
 
