--- a/index.html
+++ b/index.html
@@ -41,29 +41,28 @@
         <!-- start nav bar -->
         <nav class="navbar height10 navbar-expand-lg navbar-light cherryBlossonBG sticky-top p-0">
 
-            <a class="navbar-brand" href="#">Thai Gourmet</a>
+            <a class="navbar-brand mLeft" href="https://github.com/petersonprojects" target="_blank">petersonprojects<i class="fa fa-copyright" aria-hidden="true"></i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse p-0 height10" id="navbarText">
             <ul class="navbar-nav mr-auto align-items-center height10">
 
-                <li class="nav-item d-flex align-items-center h-100">
-                    <i class="fas fa-house-user"></i>
-                    <a class="nav-link" href="#">
-                        Home 
-                        <span class="sr-only">(current)</span></a>
+                <li class="nav-item d-flex align-items-center justify-content-center navItemSize h-100">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item d-flex align-items-center justify-content-center h-100 width100">
+                <li class="nav-item d-flex align-items-center justify-content-center h-100 navItemSize">
+                    <i class="fa fa-cutlery" aria-hidden="true"></i>
                 <a class="nav-link" href="#">Menu</a>
                 </li>
-                <li class="nav-item d-flex align-items-center justify-content-center h-100">
-                    <i class="fa fa-address-book fa-2x" aria-hidden="true"></i>
+                <li class="nav-item d-flex align-items-center justify-content-center h-100 navItemSize">
+                    <i class="fa fa-address-book" aria-hidden="true"></i>
                     <a class="nav-link" href="#">
 
                     Information</a>
                 </li>
-                <li class="nav-item d-flex align-items-center justify-content-center h-100 width100">
+                <li class="nav-item d-flex align-items-center justify-content-center navItemSize h-100">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
             </ul>
