adding about us

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Thai Gourmet - Home</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
   </head>
 
   <body class="operaMauveBG">
@@ -91,8 +92,29 @@
 
         <div class="row operaMauveBG mt-5">
             <div class="col-1"></div>
-            <div class="col-10 main cherryBlossomBG borderRadius">
+            <div class="col-10 d-flex justify-content-center p-5">
+                About Us
+            </div>
+            <div class="col-1"></div>
+        </div>
 
+        <div class="row operaMauveBG">
+            <div class="col-1"></div>
+            <div class="col-10 cherryBlossomBG borderRadius d-flex p-5">
+                <div class="col-5 mt-4 p-5 main borderRadius">
+                    <img class="padthai" src="images/padthai.jpg" alt="pad thai">
+                </div>
+                <div class="col-7 d-flex align-items-center justify-content-center karla">
+                    Kru Pong and Toon are chefs and owners of Thai Goumet Restaurant
+                    & Kru Pong Thai Boxing.
+                    Thai Gourmet has been in business since 1995.
+                    Kru Pong and his wife, Toon, have been cooking up (almost) authentic Thai food
+                    for more than 27 years in three continents.  
+                    Toon knows how to make Thai Gourmet stand out from other Thai restaurants. 
+                    Her key ingredients to make restaurants successful are taste, quality, presentation, and consistency.
+                    Come see why Thai Gourmet is still in business while others come and go.
+                </div>
+                <div class="col-2"></div>
             </div>
             <div class="col-1"></div>
         </div>
