--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <div class="row operaMauveBG">
             <div class="col-1"></div>
             <div class="col-10 cherryBlossomBG d-flex p-5 blackborder">
-                <div class="col-5 mt-4 p-5 main borderRadius2">
-                    <img class="padthai" src="images/padthai.jpg" alt="pad thai">
+                <div class="col-5 mt-4 p-5 main align-items-center justify-content-center">
+                    <img class="location" src="images/location.png" alt="thai gourmet" style="padding-top: 50px;">
                 </div>
                 <div class="col-7 karla">
 
