ho boy this alot of work

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </li>
 
                 <li class="nav-item d-flex align-items-center justify-content-center h-100 mLeft2 navItemSize">
-                <a class="nav-link bdazzledBlueText" href="#">
+                <a class="nav-link bdazzledBlueText" href="menu.html">
                     <i class="fa fa-cutlery cherryBlossomText" aria-hidden="true"></i> Menu
                 </a>
                 </li>
