working on menu

--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
             <div class="col-2"></div>
             <div class="col-8">
                 <div class="row bg-white">
-                    <div class="col-2">
+                    <div class="col-2  d-flex justify-content-center">
                         ** A-1
                     </div>
                     <div class="col-8 d-flex justify-content-start">
@@ -85,7 +85,7 @@
             <div class="col-2"></div>
             <div class="col-8">
                 <div class="row bg-white">
-                    <div class="col-2">
+                    <div class="col-2  d-flex justify-content-center">
                         ** A-2
                     </div>
                     <div class="col-8 d-flex justify-content-start">
@@ -103,7 +103,7 @@
             <div class="col-2"></div>
             <div class="col-8">
                 <div class="row bg-white">
-                    <div class="col-2">
+                    <div class="col-2  d-flex justify-content-center">
                         ** A-3
                     </div>
                     <div class="col-8">
@@ -113,7 +113,136 @@
                     </div>
 
                     <div class="col-2 d-flex justify-content-end">
-                        4.95
+                        6.50
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="row bg-white">
+                    <div class="col-2 d-flex justify-content-center">
+                        A-4
+                    </div>
+                    <div class="col-8">
+                        <b>Fish Cake</b>
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        7.95
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="row bg-white">
+                    <div class="col-2  d-flex justify-content-center">
+                        A-5
+                    </div>
+                    <div class="col-8">
+                        <b>Fried Calamari</b>
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        7.95
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="row bg-white">
+                    <div class="col-2  d-flex justify-content-center">
+                        ** A-6
+                    </div>
+                    <div class="col-8">
+                        <b>Satay</b>
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        7.95
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="row bg-white">
+                    <div class="col-2  d-flex justify-content-center">
+                        ** A-7
+                    </div>
+                    <div class="col-8">
+                        <b>Thai Gourmet Crispy Rice</b>
+                        <br>
+                        Served w/ground chicken, minced garlic, and red onions in coconut milk
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        7.50
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="row bg-white">
+                    <div class="col-2  d-flex justify-content-center">
+                        ** A-8
+                    </div>
+                    <div class="col-8">
+                        <b>Fried Golden Bags</b>
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        7.95
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="row bg-white">
+                    <div class="col-2  d-flex justify-content-center">
+                        ** A-6
+                    </div>
+                    <div class="col-8">
+                        <b>Satay</b>
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        7.95
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="row bg-white">
+                    <div class="col-2  d-flex justify-content-center">
+                        ** A-6
+                    </div>
+                    <div class="col-8">
+                        <b>Satay</b>
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        7.95
                     </div>
                 </div>
             </div>
