linking web pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <ul class="navbar-nav mr-auto align-items-center height10">
 
                 <li class="nav-item d-flex align-items-center justify-content-center navItemSize mLeft2 h-100">
-                    <a class="nav-link bdazzledBlueText" href="#">
+                    <a class="nav-link bdazzledBlueText" href="index.html">
                         <i class="fa fa-home cherryBlossomText" aria-hidden="true"></i> 
                         Home
                         <span class="sr-only">(current)</span>
