--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,56 @@
 
 <body class="operaMauveBG">
 
+    <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0" style="border:solid 2px black; border-top: none;">
+
+        <!--Logo-->
+        <a class="navbar-brand ml-4" href="http://www.thaigourmethouston.com" target="_blank">
+            <img src="images/tglogo.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|} height8" alt="">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse p-0 height10" id="navbarText">
+        <ul class="navbar-nav mr-auto align-items-center height10">
+
+            <li class="nav-item d-flex align-items-center justify-content-center navItemSize mLeft2 h-100">
+                <a class="nav-link bdazzledBlueText" href="index.html">
+                    <i class="fa fa-home cherryBlossomText" aria-hidden="true"></i> 
+                    Home
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+
+            <li class="nav-item d-flex align-items-center justify-content-center h-100 mLeft2 navItemSize">
+            <a class="nav-link bdazzledBlueText" href="menu.html">
+                <i class="fa fa-cutlery cherryBlossomText" aria-hidden="true"></i> Menu
+            </a>
+            </li>
+
+            <li class="nav-item d-flex align-items-center justify-content-center h-100 mLeft2 navItemSize">
+                <a class="nav-link bdazzledBlueText" href="index.html">
+                    <i class="fa fa-address-book cherryBlossomText" aria-hidden="true"></i> Information
+                </a>
+            </li>
+
+            <li class="nav-item d-flex align-items-center justify-content-center mLeft2 navItemSize h-100">
+                <a class="nav-link bdazzledBlueText" href="index.html">
+                    <i class="fa fa-info-circle  cherryBlossomText" aria-hidden="true"></i> About Us
+                </a>
+            </li>
+
+            <!--  -->
+        </ul>
+        <a href="https://github.com/petersonprojects" target="_blank ">
+            <span class="navbar-text mr-4 bdazzledBlueText">
+                petersonprojects<i class="fa fa-copyright" aria-hidden="true"></i>
+            </span>
+        </a>
+
+        </div>
+    </nav>
+
     <div class="container cherryBlossomBG mt-5 blackborder">
 
         <div class="row pt-5 pb-5">
@@ -66,7 +116,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row pt-3">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-1
                     </div>
@@ -84,7 +134,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-2
                     </div>
@@ -102,7 +152,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-3
                     </div>
@@ -123,7 +173,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2 d-flex justify-content-center">
                         A-4
                     </div>
@@ -141,7 +191,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
                         A-5
                     </div>
@@ -159,7 +209,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-6
                     </div>
@@ -177,9 +227,9 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
-                        ** A-7
+                        A-7
                     </div>
                     <div class="col-8">
                         <b>Thai Gourmet Crispy Rice</b>
@@ -197,16 +247,19 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-8
                     </div>
                     <div class="col-8">
                         <b>Fried Golden Bags</b>
+                        <br>
+                        Deep Fried (vegetarian)
+                        Steamed white rice mixed w/ cilantro, green & red onions w/Thai herbs, wrapped in a thin rice wrapper: served with spicy Thai Dipping sauce
                     </div>
 
                     <div class="col-2 d-flex justify-content-end">
-                        7.95
+                        5.95
                     </div>
                 </div>
             </div>
@@ -215,16 +268,16 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
-                        ** A-6
+                        A-9
                     </div>
                     <div class="col-8">
-                        <b>Satay</b>
+                        <b>Fried Tofu</b>
                     </div>
 
                     <div class="col-2 d-flex justify-content-end">
-                        7.95
+                        6.95
                     </div>
                 </div>
             </div>
@@ -233,16 +286,18 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row bg-white">
+                <div class="row">
                     <div class="col-2  d-flex justify-content-center">
-                        ** A-6
+                        A-10
                     </div>
                     <div class="col-8">
-                        <b>Satay</b>
+                        <b>Appetizer Tray</b>
+                        <br>
+                        Combination tray of A-1, A-2, A-6, & A-8 (No Substitution).
                     </div>
 
                     <div class="col-2 d-flex justify-content-end">
-                        7.95
+                        15.95
                     </div>
                 </div>
             </div>
@@ -251,8 +306,20 @@
 
         <hr>
 
+        <div class="row mt-5" style="font-size: 12px;">
+            <div class="col-2"></div>
+            <div class="col-8 p-4 ml-4">
+                Each entree is served with steamed rice per person per order. <br> Additional rice with no entree will be charged $2.95 per person
+                <br> ** Vegetarian available** <br>
+                ***Spicy upon request – not hot (not for curry), mild, medium, hot, or Thai hot. <br>
+                18% gratuity will be added to parties of 6 or more or parties with split checks. <br>
+                Chef’s note: Because we prepare your spiciness upon your request, if you order HOT or THAI HOT and it’s too spicy, you will be responsible for your order and will pay extra for new item.
+            </div>
+            <div class="col-2"></div>
+        </div>
 
-    </div>
+
+    </div> <!--end of container-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
