ten hours later

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
-  <body class="operaMauveBG">
+  <body id="home" class="operaMauveBG">
     <div class="container-fluid p-0">
 
         <!--Try to get Flamingosis "Not Like the Others" to play in background"-->
@@ -55,7 +55,7 @@
             <ul class="navbar-nav mr-auto align-items-center height10">
 
                 <li class="nav-item d-flex align-items-center justify-content-center navItemSize mLeft2 h-100">
-                    <a class="nav-link bdazzledBlueText" href="index.html">
+                    <a class="nav-link bdazzledBlueText" href="#home">
                         <i class="fa fa-home cherryBlossomText" aria-hidden="true"></i> 
                         Home
                         <span class="sr-only">(current)</span>
@@ -69,13 +69,13 @@
                 </li>
 
                 <li class="nav-item d-flex align-items-center justify-content-center h-100 mLeft2 navItemSize">
-                    <a class="nav-link bdazzledBlueText" href="#">
+                    <a class="nav-link bdazzledBlueText" href="#info">
                         <i class="fa fa-address-book cherryBlossomText" aria-hidden="true"></i> Information
                     </a>
                 </li>
 
                 <li class="nav-item d-flex align-items-center justify-content-center mLeft2 navItemSize h-100">
-                    <a class="nav-link bdazzledBlueText" href="#">
+                    <a class="nav-link bdazzledBlueText" href="#aboutus">
                         <i class="fa fa-info-circle  cherryBlossomText" aria-hidden="true"></i> About Us
                     </a>
                 </li>
@@ -108,7 +108,7 @@
         <div class="row operaMauveBG">
             <div class="col-1"></div>
             <div class="col-10 d-flex justify-content-center p-5 karla" style="font-size: 70px;">
-                About Us
+               <div id="aboutus">About Us</div>
             </div>
             <div class="col-1"></div>
         </div>
@@ -137,7 +137,7 @@
         <div class="row operaMauveBG">
             <div class="col-1"></div>
             <div class="col-10 d-flex justify-content-center p-5 karla" style="font-size: 70px;">
-                Information
+                <div id="info">Information</div>
             </div>
             <div class="col-1"></div>
         </div>
