--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,7 @@
 
         <div class="row pt-5 pb-5">
             <div class="col-2"></div>
-            <div class="col-8 bg-white blackborder">
+            <div class="col-8 blackborder" style="background-color: #BBBBBF">
                 <p>
                     Due to unforeseen circumstances, following items are currently NOT available until further notice.
                     <br>
@@ -100,8 +100,6 @@
 
         <hr>
 
-        <br>
-        <br>
         <br>
         <br>
 
