changed pink to white

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="row operaMauveBG mt-5">
             <div class="col-2"></div>
-            <div class="col-8 d-flex justify-content-center p-4 karla cherryBlossomBG blackborder" style="font-size: 20px;">
+            <div class="col-8 d-flex justify-content-center p-4 bg-white karla blackborder" style="font-size: 20px;">
                 <b>Welcome to the house of typical Thai cuisine...
 
                 Thai people love to greet guests with the best food and hospitality.
@@ -113,7 +113,7 @@
 
         <div class="row operaMauveBG">
             <div class="col-1"></div>
-            <div class="col-10 cherryBlossomBG d-flex p-5 blackborder">
+            <div class="col-10 bg-white d-flex p-5 blackborder">
                 <div class="col-5 mt-4 p-5 main borderRadius2">
                     <img class="padthai" src="images/padthai.jpg" alt="pad thai">
                 </div>
@@ -143,7 +143,7 @@
 
         <div class="row operaMauveBG">
             <div class="col-1"></div>
-            <div class="col-10 cherryBlossomBG d-flex p-5 blackborder">
+            <div class="col-10 cherryBlossomBG d-flex p-5 bg-white blackborder">
                 <div class="col-5 mt-4 p-5 main align-items-center justify-content-center">
                     <img class="location" src="images/location.png" alt="thai gourmet" style="padding-top: 50px;">
                 </div>
