--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
         </div>
     </nav>
 
-    <div class="container cherryBlossomBG mt-5 blackborder">
+    <div class="container  bg-white mt-5 blackborder">
 
         <div class="row pt-5 pb-5">
             <div class="col-2"></div>
