trying to include bg image on menu

--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Menu</title>
+    <title>Thai Gourmet - Menu</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,6 +17,7 @@
 
 <body class="operaMauveBG">
 
+    <!-- <img class="bgimage z0" src="images/bgimage.jpeg" alt="thailand beautiful"> -->
     <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0" style="border:solid 2px black; border-top: none;">
 
         <!--Logo-->
@@ -27,7 +28,9 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse p-0 height10" id="navbarText">
+
         <ul class="navbar-nav mr-auto align-items-center height10">
 
             <li class="nav-item d-flex align-items-center justify-content-center navItemSize mLeft2 h-100">
@@ -56,7 +59,6 @@
                 </a>
             </li>
 
-            <!--  -->
         </ul>
         <a href="https://github.com/petersonprojects" target="_blank ">
             <span class="navbar-text mr-4 bdazzledBlueText">
